# uni-testing-apimocker

./: README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
api/: __init__.py  base_client.py  endpoints.py  mock_api_client.py
core/: __init__.py  allure_steps.py  config.py  logger.py
helpers/: __init__.py  string_generators.py
tests/: test_comments.py  test_posts.py  test_todos.py  test_users.py
